--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,31 +6,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetComposeUI"
         tools:targetApi="31">
-        <activity
-            android:name=".DrawerActivity"
-            android:exported="true"
-            android:label="@string/title_activity_drawer"
-            android:theme="@style/Theme.JetComposeUI" >
-        </activity>
-        <activity
-            android:name=".drawermenu"
-            android:exported="false"
-            android:label="@string/title_activity_drawermenu"
-            android:theme="@style/Theme.JetComposeUI" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.JetComposeUI">
-
-        </activity>
-
         <activity
             android:name=".screens.login.LoginActivity"
             android:exported="true"
