--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JetComposeUI"
         tools:targetApi="31">
         <activity
-            android:name=".screens.login.LoginActivity"
+            android:name=".screens.HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_drawer"
             android:theme="@style/Theme.JetComposeUI" >
